[package]
name = "are_we_touching"
authors = ["cubidev"]
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A Simple Collision Detection library"
readme = "README.md"
homepage = "https://github.com/Cubidev3/Are-We-Touching"
repository = "https://github.com/Cubidev3/Are-We-Touching"
keywords = ["collision", "detection", "gamedev", "api"]
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cubi_vectors = "0.1.5"
